# Mini-CAD

./: .gitignore  CMakeLists.txt  Doxyfile  commands.h  mainpage.md  mainwindow.ui  shapelistdock.cpp  shapelistdock.h  shapes.cpp
docs/html/: annotated.html  annotated_dup.js  class_add_shape_command-members.html  class_add_shape_command.html  class_add_shape_command.js  class_circle_item-members.html  class_circle_item.html  class_circle_item.js  class_drawing_scene-members.html  class_drawing_scene.html  class_drawing_scene.js  class_drawing_view-members.html  class_drawing_view.html  class_drawing_view.js  class_edit_shape_command-members.html  class_edit_shape_command.html  class_edit_shape_command.js  class_line_item-members.html  class_line_item.html  class_line_item.js  class_main_window-members.html  class_main_window.html  class_move_shapes_command-members.html  class_move_shapes_command.html  class_move_shapes_command.js  class_rect_item-members.html  class_rect_item.html  class_rect_item.js  class_remove_shapes_command-members.html  class_remove_shapes_command.html  class_remove_shapes_command.js  class_shape_params_dialog-members.html  class_shape_params_dialog.html  class_shape_params_dialog.js  classes.html  commands_8h_source.html  doxygen_crawl.html  drawingscene_8h.html  drawingscene_8h.js  drawingscene_8h_source.html  (+22 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+16 more)
src/commands/: commands.cpp  commands3d.cpp  commands3d.h
src/model/: shape3d.cpp  shape3d.h  shapes.h
src/scene/: drawingscene.cpp  drawingscene.h
src/ui/: arraydialog.cpp  arraydialog.h  mainwindow.cpp  mainwindow.h  propertypanel.cpp  propertypanel.h  shapedialog.cpp  shapedialog.h  shapedialog3d.cpp  shapedialog3d.h  shapelistdock.cpp  shapelistdock.h
src/viewer/: axisindicator.cpp  axisindicator.h  viewer3d.cpp  viewer3d.h
tests/: CMakeLists.txt  tst_commands.cpp  tst_shapes.cpp
